# focus_offset_public

./: .gitignore  AGENT_EXECUTION_GUIDE.md  CLAUDE.md  OPTIMIZATION_REPORT.md  README.md  RESEARCH_GOALS.md  benchmark_log.txt  benchmark_models.json  benchmark_models_5090.json  benchmark_results.json  config.py  dataset_architecture.md  default_config.yaml  eval_output.txt  eval_output_v2.txt  eval_output_v3.txt  eval_output_v4.txt  eval_output_v5.txt  evaluate.py  evaluation_results.json  jiang2018_results.md  main.py  multiprocessing_safety.md  notizne  prepare_dataset.py  pyproject.toml  requirements.md  research.md  splits.json  splits_AgNor.json  splits_ZStack_HE.json  splits_ZStack_IHC.json  train.py  visualize_jiang_offsets.py
.claude/: settings.json
configs/: trainer.yaml  trainer_fast.yaml
debugging_scripts/: reproduce_child_crash.py  reproduce_dataloader_crash.py  reproduce_fd_inheritance.py
docs/: dataloader.md  dataset_architecture.md  dataset_prep_runtime_estimate.md  fast_brenner_vectorization.md  filtering.md  focus_strategy.md  multimodal_focus_model.md  preprocessing_pipeline_optimization.md  split_analysis_ZStack_HE.md  tissue_mask_mapping_example.md  vsi_extraction_benchmarks.md  vsi_preprocessing.md
eval_results_smoke_test/: rgb_predictions.csv
focus_offset/: config.py  plotting.py  prediction.py  training.py
plans/: 00_data_ingestion_sanitization.md  00_interface_design.md  01_data_foundation_spatial_dry_run.md  01_raw_data_acquisition.md  02_preprocessing_csv_index.md  02_preprocessing_validation_export.md  03_dataloader_training_dryrun.md  03_feature_domain_ablation.md  04_feature_domain_ablation.md  04_stain_augmentation_injection.md  05_stain_augmentation.md  05_synthetic_kernel_generation.md  06_multi_dataset_expansion.md  06_synthetic_real_pair_learning.md  07_multi_dataset_scale_up.md  07_synthetic_kernel_learning.md  EXP_01_multifocal_detection.md  EXP_02_multi_magnification_ablation.md  EXP_03_synthetic_augmentation_generalization.md
scripts/: __init__.py  collect_results.py  list_exact_datasets.py  plot_training.py  predict.py  predict_models.py  prep_agnor.py  smoke_test_vsi.py  summarize.py  test_dataloaders.py  test_drivers.py  train.py  train_kfold.py  train_models.py  verify_z_planes.py  visualize_jiang_patches.py
shared_datasets/: zstack_he.py  zstack_ihc.py
slideoio_mp_problem/: multiprocessing_safety.md  reproduce_child_crash.py  reproduce_dataloader_crash.py  reproduce_fd_inheritance.py
splits/: splits_AgNor.json  splits_ZStack_HE.json  splits_ZStack_IHC.json
src/: config.py  eval.py  eval_ensemble.py  evaluate.py  evaluate_benchmarks.py  evaluate_kfold.py  plotting.py  prediction.py  run_kfold.py  run_models.py  train.py  train_kfold.py  train_models.py  training.py
synthetic_data/: EXPERIMENT_REPORT.md  config.py  dataset.py  model.py
(+241 files in other folders)
