[project]
name = "focus_offset_public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "exact-sync>=0.0.39",
    "histolab>=0.2.0",
    "imagecodecs>=2026.1.14",
    "lightning[pytorch-extra]>=2.6.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "ptwt>=0.1.9",
    "pywavelets>=1.9.0",
    "slideio>=2.7.4",
    "timm>=1.0.24",
    "tifffile",
    "torch>=2.9.1",
    "seaborn>=0.13.2",
    "pyarrow>=23.0.1",
    "tabulate>=0.9.0",
    "opencv-python-headless>=4.13.0.90",
    "ipykernel>=7.2.0",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["shared_datasets*", "focus_offset*", "synthetic_data*"]

[project.scripts]
train = "focus_offset.scripts.train:main"
train_models = "focus_offset.scripts.train_models:main"
predict_models = "focus_offset.scripts.predict_models:main"
train_suite = "synthetic_data.scripts.run_experiment_suite:main"